--- a/SecureWiki/SecureWiki/SecureWiki.csproj
+++ b/SecureWiki/SecureWiki/SecureWiki.csproj
@@ -9,4 +9,9 @@
       <Folder Include="Cryptography" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="LinqToWiki" Version="1.5.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.1-beta1" />
+    </ItemGroup>
+
 </Project>
