--- a/SecureWiki/SecureWiki/SecureWiki.csproj
+++ b/SecureWiki/SecureWiki/SecureWiki.csproj
@@ -6,10 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Cryptography" />
-    </ItemGroup>
-
-    <ItemGroup>
+      <PackageReference Include="BouncyCastle.NetCore" Version="1.8.8" />
       <PackageReference Include="LinqToWiki" Version="1.5.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1-beta1" />
     </ItemGroup>
