--- a/SecureWiki/SecureWiki/SecureWiki.csproj
+++ b/SecureWiki/SecureWiki/SecureWiki.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="BouncyCastle.NetCore" Version="1.8.8" />
+      <PackageReference Include="IronPython" Version="2.7.11" />
       <PackageReference Include="LinqToWiki" Version="1.5.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1-beta1" />
     </ItemGroup>
