--- a/SecureWiki/Avalonia.NETCoreMVVMApp/SecureWiki.csproj
+++ b/SecureWiki/Avalonia.NETCoreMVVMApp/SecureWiki.csproj
@@ -15,5 +15,6 @@
         <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.0" />
         <PackageReference Include="JsonFlatten" Version="1.0.1" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1-beta1" />
+        <PackageReference Include="UnmanagedExports" Version="1.2.7" />
     </ItemGroup>
 </Project>
