--- a/SecureWiki/Avalonia.NETCoreMVVMApp/SecureWiki.csproj
+++ b/SecureWiki/Avalonia.NETCoreMVVMApp/SecureWiki.csproj
@@ -7,6 +7,7 @@
     <ItemGroup>
         <Folder Include="Models\" />
         <AvaloniaResource Include="Assets\**" />
+        <Folder Include="RevisionCache" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Avalonia" Version="0.10.0" />
