--- a/SecureWiki/Avalonia.NETCoreMVVMApp/SecureWiki.csproj
+++ b/SecureWiki/Avalonia.NETCoreMVVMApp/SecureWiki.csproj
@@ -5,6 +5,7 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
+        <Folder Include="Contacts" />
         <Folder Include="Models\" />
         <AvaloniaResource Include="Assets\**" />
         <Folder Include="RevisionCache" />
