Added new SecureWikiTests project.

--- a/SecureWiki/SecureWikiTests/SecureWikiTests.csproj
+++ b/SecureWiki/SecureWikiTests/SecureWikiTests.csproj
@@ -16,4 +16,8 @@
       <ProjectReference Include="..\Avalonia.NETCoreMVVMApp\SecureWiki.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="TestData\RevisionCache" />
+    </ItemGroup>
+
 </Project>
